--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.1-0.20200517180335-820a4a27ea84
+    controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
   name: services.ibmcloud.ibm.com
 spec:
@@ -61,7 +61,11 @@ spec:
                 properties:
                   attributes:
                     additionalProperties:
-                      type: Any
+                      description: RawMessage is a raw encoded JSON value. It implements
+                        Marshaler and Unmarshaler and can be used to delay JSON decoding
+                        or precompute a JSON encoding.
+                      format: byte
+                      type: string
                     description: A parameter may have attributes (e.g. message hub
                       topic might have partitions)
                     type: object
@@ -70,7 +74,8 @@ spec:
                     type: string
                   value:
                     description: Defaults to null.
-                    type: Any
+                    format: byte
+                    type: string
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
@@ -177,7 +182,11 @@ spec:
                 properties:
                   attributes:
                     additionalProperties:
-                      type: Any
+                      description: RawMessage is a raw encoded JSON value. It implements
+                        Marshaler and Unmarshaler and can be used to delay JSON decoding
+                        or precompute a JSON encoding.
+                      format: byte
+                      type: string
                     description: A parameter may have attributes (e.g. message hub
                       topic might have partitions)
                     type: object
@@ -186,7 +195,8 @@ spec:
                     type: string
                   value:
                     description: Defaults to null.
-                    type: Any
+                    format: byte
+                    type: string
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
