--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -1,5 +1,3 @@
-
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -61,11 +59,7 @@ spec:
                 properties:
                   attributes:
                     additionalProperties:
-                      description: RawMessage is a raw encoded JSON value. It implements
-                        Marshaler and Unmarshaler and can be used to delay JSON decoding
-                        or precompute a JSON encoding.
-                      format: byte
-                      type: string
+                      type: object
                     description: A parameter may have attributes (e.g. message hub
                       topic might have partitions)
                     type: object
@@ -74,8 +68,6 @@ spec:
                     type: string
                   value:
                     description: Defaults to null.
-                    format: byte
-                    type: string
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
@@ -182,11 +174,7 @@ spec:
                 properties:
                   attributes:
                     additionalProperties:
-                      description: RawMessage is a raw encoded JSON value. It implements
-                        Marshaler and Unmarshaler and can be used to delay JSON decoding
-                        or precompute a JSON encoding.
-                      format: byte
-                      type: string
+                      type: object
                     description: A parameter may have attributes (e.g. message hub
                       topic might have partitions)
                     type: object
@@ -195,8 +183,6 @@ spec:
                     type: string
                   value:
                     description: Defaults to null.
-                    format: byte
-                    type: string
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
