--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
       script: make lint
     - name: Test
       script: make test
+      if: type = pull_request  # Don't run int tests on the same account in parallel, risks name conflicts
     - name: Test End-to-end
       script: make test-e2e
     - name: Release
