--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jobs:
       if: type = pull_request  # Don't run int tests on the same account in parallel, risks name conflicts
     - name: Test End-to-end
       script: make test-e2e
+    - name: Docker Build
+      script: make docker-build
     - name: Release
       stage: release
       script: make -e RELEASE_VERSION="${TRAVIS_TAG/v}" release
