--- a/config/samples/sql-query.yaml
+++ b/config/samples/sql-query.yaml
@@ -1,7 +1,7 @@
 apiVersion: ibmcloud.ibm.com/v1beta1
 kind: Service
 metadata:
-  name: service-sample
+  name: mysqlquery
 spec:
-  # Add fields here
-  foo: bar
+  plan: lite
+  serviceClass: sql-query
